k8-components/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db
  labels:
    name: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo-pod
  template:
    metadata:
      name: mongo-pod
      labels:
        name: mongo-pod
    spec:
      containers:
        - name: mongo
          image: mongo:5.0
          ports:
            - containerPort: 27017
