k8-components/mongo-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-web-ui
  labels:
    name: mongo-express
  namespace: mong-exp
spec:
  selector:
    matchLabels:
      name: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        name: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.1
          ports:
            - containerPort: 8081
