k8-components/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    name: web-app
  namespace: mong-exp
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web-pod
  template:
    metadata:
      name: web-pod
      labels:
        name: web-pod
    spec:
      containers:
        - name: webapp
          image: thanandock/sample-js-mongo-app:latest
          ports:
            - containerPort: 3000
