k8-components/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    name: mongo-express
  type: NodePort
  ports:
    - targetPort: 8081
      port: 8081
      nodePort: 32001
      name: node01
      protocol: TCP
