k8-components/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    name: mongo-pod
  type: ClusterIP
  ports:
    - name: port0
      protocol: TCP
      port: 27017
      targetPort: 27017
