k8-components/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    name: web-pod
  type: NodePort
  ports:
    - name: port0
      protocol: TCP
      nodePort: 32000
      port: 3000
      targetPort: 3000
